--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,10 @@
   .custom-bg {
     @apply bg-background border border-accent border-solid backdrop-blur-[6px] shadow-glass-inset hover:shadow-glass-sm;
   }
+
+  .bg-firefly-radial {
+    background: radial-gradient(circle at center, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0));
+  }
 }
 
 @keyframes move {
@@ -29,8 +33,30 @@
     transform: translate(100px, 100px);
   }
 }
- 
- /* For the transparent background */
+
+/* Firefly animation */
+@keyframes fly {
+  0% {
+    transform: translate(0, 0) scale(1);
+  }
+  50% {
+    transform: translate(50px, 50px) scale(1.2);
+  }
+  100% {
+    transform: translate(0, 100px) scale(1);
+  }
+}
+
+.firefly {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  position: absolute;
+  background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 60%);
+  animation: fly 10s infinite ease-in-out;
+  box-shadow: 0 0 8px 2px rgba(255, 255, 255, 0.5);
+}
+
 .transparent-box {
   background-color: rgba(0, 0, 0, 0.5); /* Black with 50% transparency */
   padding: 20px;
@@ -38,17 +64,16 @@
   transition: background-color 0.3s ease;
 }
 
-/* On hover or focus (click) */
 .transparent-box:hover,
 .transparent-box:focus {
-  background-color: rgba(254, 254, 91, 0.2); /* Light yellow with 20% transparency */
+  background-color: rgba(254, 254, 91, 0.2);
   outline: none;
 }
 
-/* For when a box is clicked, to keep the effect */
 .transparent-box:active {
-  background-color: rgba(254, 254, 91, 0.4); /* Slightly stronger yellow */
+  background-color: rgba(254, 254, 91, 0.4);
 }
+
 @keyframes rotate {
   from {
     transform: rotate(0deg);
